# SteamSalesTray

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/app/: App.cpp  App.h  Main.cpp  Messages.h  SingleInstance.cpp  SingleInstance.h
src/network/: UrlEncoder.cpp  UrlEncoder.h  WinHttpClient.cpp  WinHttpClient.h
src/platform/: Logging.cpp  Logging.h  Paths.cpp  Paths.h  StartupManager.cpp  StartupManager.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.h  Win32Error.cpp  Win32Error.h
src/resources/: Resource.h  SteamSalesTray.rc  app.manifest
src/security/: DpapiSecretStore.cpp  DpapiSecretStore.h  SecureString.cpp  SecureString.h
src/steam/: SteamFinancialClient.cpp  SteamFinancialClient.h  SteamJsonParser.cpp  SteamJsonParser.h  SteamModels.h
src/storage/: Database.cpp  Database.h  Migrations.cpp  Migrations.h  Models.h  SettingsStore.cpp  SettingsStore.h
src/sync/: SalesAggregator.cpp  SalesAggregator.h  SalesSyncService.cpp  SalesSyncService.h  SyncStatus.h
src/tray/: TrayIcon.cpp  TrayIcon.h  TrayMenu.cpp  TrayMenu.h
src/ui/: SalesWindow.cpp  SalesWindow.h  SettingsDialog.cpp  SettingsDialog.h
tests/: DatabaseTests.cpp  DpapiSecretStoreTests.cpp  LoggingTests.cpp  SteamJsonParserTests.cpp
